fix(pro:search): replace spacing with theme tokens (#1793)

--- a/packages/pro/search/style/variables.less
+++ b/packages/pro/search/style/variables.less
@@ -14,7 +14,7 @@
 @pro-search-disabled-color: var(--ix-color-text-disabled);
 @pro-search-disabled-background-color: var(--ix-control-bg-color-disabled);
 
-@pro-search-placeholder-padding-horizontal: 12px;
+@pro-search-placeholder-padding-horizontal: var(--ix-padding-size-md);
 
 @pro-search-clear-icon-font-size: var(--ix-font-size-icon);
 @pro-search-clear-icon-width: var(--ix-font-size-icon);
@@ -36,7 +36,7 @@
 
 @pro-search-item-tag-color: var(--ix-pro-search-tag-color);
 @pro-search-item-tag-background-color: var(--ix-pro-search-tag-bg-color);
-@pro-search-item-tag-border-radius: 2px;
+@pro-search-item-tag-border-radius: var(--ix-border-radius-sm);
 @pro-search-item-tag-padding: 2px 4px 2px 8px;
 @pro-search-item-tag-disabled-border-color: var(--ix-color-border);
 @pro-search-item-tag-disabled-color: var(--ix-pro-search-tag-color-disabled);
@@ -51,11 +51,11 @@
 
 @pro-search-overlay-padding: 0;
 
-@pro-search-panel-footer-border-width: 1px;
-@pro-search-panel-footer-border-style: solid;
+@pro-search-panel-footer-border-width: var(--ix-line-width);
+@pro-search-panel-footer-border-style: var(--ix-line-type);
 @pro-search-panel-footer-border-color: var(--ix-color-separator);
-@pro-search-panel-footer-padding-horizontal: 12px;
-@pro-search-panel-footer-padding-vertical: 8px;
+@pro-search-panel-footer-padding-horizontal: var(--ix-padding-size-md);
+@pro-search-panel-footer-padding-vertical: var(--ix-padding-size-sm);
 @pro-search-panel-footer-button-margin: var(--ix-margin-size-md);
 
 @pro-search-date-picker-panel-body-padding: var(--ix-padding-size-lg);
